Final update for real this time. Fixed portfolio back/next being covered by the link container.

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ li
 	
 	#buttoncontainer
 	{
-		bottom: 15%;
+		bottom: 17.5%;
 	}
 
 	.header 
